objects/Line_Item__c.object
<CustomObject>
    <description>Line Items custom object</description>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>Invoice for master detail relationship</description>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineAfterTrigger__c</fullName>
        <label>LineAfterTrigger</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineBeforeTrigger__c</fullName>
        <label>LineBeforeTrigger</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>smith__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <description>Total cost incurred</description>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>product of Unitcost and currency</inlineHelpText>
        <label>Total cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unti price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lineitem_Quantity_validation</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt;=0</errorConditionFormula>
        <errorMessage>Quantity cannot be negative</errorMessage>
    </validationRules>
</CustomObject>